<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@drawable/wood"
    tools:context=".ProfileActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="364dp"
        android:layout_margin="5dp"
        android:background="@drawable/wood"
        app:cardCornerRadius="5dp"
        app:cardElevation="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="wrap_content"
                android:layout_height="271dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_top"
                android:contentDescription="@string/profile_pic"
                android:src="@drawable/avatar1" />

            <TextView
                android:id="@+id/usernameTextView"
                android:layout_width="match_parent"
                android:layout_below="@+id/profileImageView"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="5dp"
                android:background="#8c000000"
                android:gravity="center"
                android:padding="20dp"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="@string/jones"
                android:layout_height="0dp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/developerUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/githuburl"
            android:textColor="#ffffff"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="italic"/>

        <ImageButton
            android:id="@+id/shareProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_share_36dp"
            android:background="#DB7A450D"
            android:contentDescription="@string/share_btn" />

    </RelativeLayout>

</LinearLayout>