<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/wood">

    <!-- This will store the data in a CardView and then use the cards to populate
    the RecyclerView. -->

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/layout_margin">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C5BDBD"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_margin="5dp"
                android:background="@drawable/avatar1"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/profile_pic" />

            <TextView
                android:id="@+id/username"
                android:layout_margin="5dp"
                android:gravity="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"/>

            <TextView
                android:id="@+id/htmUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/html_url"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>